--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,13 +3,13 @@ $menuText: #bfcbd9;
 $menuActiveText: #409eff;
 $subMenuActiveText: #f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg: #304156;
+$menuBg: -webkit-gradient(linear, left top, right top, from(#1493fa), to(#01c6fa));
 $menuHover: #ecf5ff;
 
 $subMenuBg: #fff;
 $subMenuHover: #001528;
 
-$sideBarWidth: 210px;
+$sideBarWidth: 180px;
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
